k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        # Używamy nazwy obrazu, którą załadowaliśmy do minikube
        image: k8s-todo-app-backend
        # WAŻNE: K8s nie może szukać obrazu w internecie, ma go wziąć z lokalnego node'a
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP # Serwis wewnętrzny
